--- a/style.css
+++ b/style.css
@@ -2,8 +2,8 @@
 
 body
 {
-    background-color: green;
-    color: Black;
+    background-color:#73d373;
+    color:#1d571d;
     font-size: 12pt;
-    font-family: Arial;
+    font-family:Arial;
 }
