--- a/style.css
+++ b/style.css
@@ -3,7 +3,6 @@
 body
 {
     font-size: 13pt;
-    font-family:Arial;
     text-align: center;
     color: rgb(30, 30, 30);
     background-image: linear-gradient(90deg, rgb(21, 90, 32), rgb(64, 238, 78) );
@@ -11,18 +10,32 @@ body
 h1
 {
     color:rgb(30, 30, 30);
-    font-size: 26pt;
+    font-size: 30pt;
+    font-family:Arial;
 }
 h2
 {
     color:rgb(30, 30, 30);
+    font-size: 30pt;
+    font-family:Arial;
 }
 p
 {
     font-size: 16pt;
+    font-family:sans-serif;
 }
 a
 {
   text-decoration: none;
+  color:rgb(75, 58, 163);
+  font-size: 15pt;
+  font-family:sans-serif;
 }
+li
+{
+    font-family: sans-serif;
+    font-size: 22px;
+    font-style:normal;
+}
+
 
