--- a/style.css
+++ b/style.css
@@ -11,29 +11,39 @@ h1
 {
     color:rgb(30, 30, 30);
     font-size: 30pt;
-    font-family:Arial;
+    font-family:Arial, Helvetica, sans-serif
+}
+h1.principal
+{
+    color:rgb(105, 6, 124);
+    font-size: 35pt;
 }
 h2
 {
     color:rgb(30, 30, 30);
     font-size: 30pt;
-    font-family:Arial;
+    font-family:Arial, Helvetica, sans-serif
+}
+h2.secundario
+{
+    color: rgb(74, 8, 134);
+    font-size: 28pt;
 }
 p
 {
     font-size: 16pt;
-    font-family:sans-serif;
+    font-family:sans-serif,Arial, Helvetica;
 }
 a
 {
   text-decoration: none;
   color:rgb(75, 58, 163);
   font-size: 15pt;
-  font-family:sans-serif;
+  font-family:sans-serif,Arial, Helvetica;
 }
 li
 {
-    font-family: sans-serif;
+    font-family:sans-serif,Arial, Helvetica;
     font-size: 22px;
     font-style:normal;
 }
