--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@ body
 }
 h1
 {
-    color:rgb(30, 30, 30);
+    color:rgb(30,30,30);
     font-size: 30pt;
     font-family:Arial, Helvetica, sans-serif
 }
@@ -17,6 +17,12 @@ h1.principal
 {
     color:rgb(105, 6, 124);
     font-size: 35pt;
+}
+#id.texto_informativo
+{
+    text-align: center;
+    color: rgb(255, 0, 0);
+    font-size: 30pt;
 }
 h2
 {
@@ -28,6 +34,13 @@ h2.secundario
 {
     color: rgb(74, 8, 134);
     font-size: 28pt;
+}
+h2.titulo_informativo
+{
+    text-align:left;
+    color: black;
+    font-size: 25pt;
+    font-family: Arial, Helvetica, sans-serif;
 }
 p
 {
