--- a/style.css
+++ b/style.css
@@ -18,10 +18,10 @@ h1.principal
     color:rgb(105, 6, 124);
     font-size: 35pt;
 }
-#id.texto_informativo
+#texto_informativo
 {
     text-align: center;
-    color: rgb(255, 0, 0);
+    color: rgb(0, 0, 0);
     font-size: 30pt;
 }
 h2
@@ -30,12 +30,12 @@ h2
     font-size: 30pt;
     font-family:Arial, Helvetica, sans-serif
 }
-h2.secundario
+.secundario
 {
     color: rgb(74, 8, 134);
     font-size: 28pt;
 }
-h2.titulo_informativo
+.titulo_informativo
 {
     text-align:left;
     color: black;
@@ -46,6 +46,13 @@ p
 {
     font-size: 16pt;
     font-family:sans-serif,Arial, Helvetica;
+}
+.texto_escrito_informativo
+{
+    text-align: left;
+    font-size: 15pt;
+    font-family: sans-serif,Arial, Helvetica;
+    color: black;
 }
 a
 {
