--- a/style.css
+++ b/style.css
@@ -18,7 +18,7 @@ h1.principal
     color:rgb(105, 6, 124);
     font-size: 35pt;
 }
-#texto_informativo
+#titulo_diferente
 {
     text-align: center;
     color: rgb(0, 0, 0);
@@ -38,7 +38,14 @@ h2
 .titulo_informativo
 {
     text-align:left;
-    color: black;
+    color: rgb(3, 8, 80);
+    font-size: 25pt;
+    font-family: Arial, Helvetica, sans-serif;
+}
+.titulo_informativo2
+{
+    text-align:left;
+    color: rgb(87, 3, 3);
     font-size: 25pt;
     font-family: Arial, Helvetica, sans-serif;
 }
@@ -49,6 +56,7 @@ p
 }
 .texto_escrito_informativo
 {
+    font-weight: 750;
     text-align: left;
     font-size: 15pt;
     font-family: sans-serif,Arial, Helvetica;
