--- a/style.css
+++ b/style.css
@@ -38,14 +38,7 @@ h2
 .titulo_informativo
 {
     text-align:left;
-    color: rgb(3, 8, 80);
-    font-size: 25pt;
-    font-family: Arial, Helvetica, sans-serif;
-}
-.titulo_informativo2
-{
-    text-align:left;
-    color: rgb(87, 3, 3);
+    color: rgb(0, 0, 0);
     font-size: 25pt;
     font-family: Arial, Helvetica, sans-serif;
 }
@@ -58,9 +51,17 @@ p
 {
     font-weight: 750;
     text-align: left;
-    font-size: 15pt;
-    font-family: sans-serif,Arial, Helvetica;
-    color: black;
+    font-size: 20pt;
+    font-family: Verdana;
+    color: rgb(10, 3, 116);
+}
+.texto_escrito_informativo2
+{
+    font-weight: 750;
+    text-align: left;
+    font-size: 16pt;
+    font-family: Arial;
+    color: rgb(136, 3, 3);
 }
 a
 {
